Fix z-index

--- a/app/javascript/app/styles/themes/chart/legend-chart.scss
+++ b/app/javascript/app/styles/themes/chart/legend-chart.scss
@@ -15,6 +15,11 @@
 }
 
 .legend {
+  // tagsContainer
+  > div > div {
+    z-index: 1;
+  }
+
   :global {
     .react-selectize-control {
       border: $dropdown-border !important;
